--- a/Properties/Resources.resx
+++ b/Properties/Resources.resx
@@ -130,6 +130,9 @@
   <data name="VCRMoveFirstGray" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\VCRMoveFirstGray.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="VCRMoveLastGray" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\VCRMoveLastGray.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="VCRMoveLast" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\VCRMoveLast.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
@@ -139,10 +142,13 @@
   <data name="VCRMoveNextGray" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\VCRMoveNextGray.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="AllCaughtUp" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Images\AllCaughtUp.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="VCRMovePreviousMin" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\VCRMovePreviousMin.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="VCRMoveLastGray" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\VCRMoveLastGray.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="NoImagesFound" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\NoImagesFound.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
